tests/errors/type_check/place_typing/place_downcast_unknown_variant.err.expected
error: at 6:13: [TC-NoSuchVariant] In function 'f', block 'entry': Enum 'Option' has no variant 'Wat'
   |
 6 |             x = copy o as Wat;
   |             ^^^^^^^^^^^^^^^^^
error: at 6:13: [VF-DowncastVariantNotRefined] In function 'f', block 'entry': cannot downcast 'o as Wat' here: 'o' is not refined to variant 'Wat'
   |
 6 |             x = copy o as Wat;
   |             ^^^^^^^^^^^^^^^^^
